; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_utime.c__tutime64.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/time/extr_utime.c__tutime64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._utimbuf = type { i32 }

@_O_WRONLY = common dso_local global i32 0, align 4
@_O_BINARY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_tutime(i32* %0, %struct._utimbuf* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct._utimbuf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct._utimbuf* %1, %struct._utimbuf** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @_O_WRONLY, align 4
  %10 = load i32, i32* @_O_BINARY, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @_topen(i32* %8, i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = load %struct._utimbuf*, %struct._utimbuf** %5, align 8
  %18 = call i32 @_futime(i32 %16, %struct._utimbuf* %17)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @_close(i32 %19)
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* %3, align 4
  br label %23

22:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %15
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @_topen(i32*, i32) #1

declare dso_local i32 @_futime(i32, %struct._utimbuf*) #1

declare dso_local i32 @_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
